# DolanEngine

./: .gitignore  .gitmodules  ANALYSIS_SUMMARY.md  API_REFERENCE.md  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_INDEX.md  FAQ.md  FIXES_APPLIED.md  GAME_SHOOTER_PLAN.md  IMGUI_DOCKING_UPGRADE.md  LICENSE  PHASE10_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  PHASE7_COMPLETE.md  PHASE8_COMPLETE.md  PHASE9_COMPLETE.md  PHASE9_PLAN.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_PHASE3.md  QUICK_REFERENCE.md  QUICK_REFERENCE_FIXES.md  README.md  ROADMAP.md  SETUP.md  SHOOTER_BUILD_GUIDE.md  STATUS.md  USER_GUIDE.md
Editor/: CMakeLists.txt
Editor/src/: EditorApp.cpp
Engine/: CMakeLists.txt
Engine/include/: Engine.h
Engine/include/Engine/Animation/: AnimationClip.h  Animator.h
Engine/include/Engine/Assets/: AssetManager.h
Engine/include/Engine/Audio/: AudioBuffer.h  AudioEngine.h  AudioSource.h
Engine/include/Engine/Core/: Application.h  Base.h  EntryPoint.h  Input.h  Layer.h  Logger.h  TimeStep.h  Window.h
Engine/include/Engine/Debug/: Profiler.h
Engine/include/Engine/Editor/: AssetBrowserPanel.h  ConsolePanel.h  ProfilerPanel.h  SceneHierarchyPanel.h
Engine/include/Engine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/include/Engine/ImGui/: ImGuiLayer.h
Engine/include/Engine/Physics/: ContactListener.h  Physics2D.h  PhysicsComponents.h
Engine/include/Engine/Renderer/: Buffer.h  CameraController.h  Framebuffer.h  OrthographicCamera.h  ParticleSystem.h  RenderCommand.h  Renderer2D.h  RendererAPI.h  Shader.h  SubTexture2D.h  Texture.h  VertexArray.h
Engine/include/Engine/Scene/: Components.h  Entity.h  Scene.h  SceneSerializer.h
Engine/include/Engine/Scripting/: ScriptEngine.h  ScriptReloader.h
Engine/src/Animation/: AnimationClip.cpp  Animator.cpp
Engine/src/Assets/: AssetManager.cpp
Engine/src/Audio/: AudioBuffer.cpp  AudioEngine.cpp  AudioSource.cpp
Engine/src/Core/: Application.cpp  Layer.cpp  Logger.cpp
Engine/src/Debug/: Profiler.cpp
Engine/src/Editor/: AssetBrowserPanel.cpp  ConsolePanel.cpp  ProfilerPanel.cpp  SceneHierarchyPanel.cpp
Engine/src/ImGui/: ImGuiLayer.cpp
Engine/src/Physics/: ContactListener.cpp  Physics2D.cpp  PhysicsComponents.cpp
Engine/src/Platform/OpenGL/: GLFWInput.cpp  GLFWWindow.cpp  GLFWWindow.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLTexture.cpp  OpenGLTexture.h
Engine/src/Renderer/: CameraController.cpp  Framebuffer.cpp  OrthographicCamera.cpp  ParticleSystem.cpp  RenderCommand.cpp  Renderer2D.cpp  RendererAPI.cpp  Shader.cpp  SubTexture2D.cpp
Engine/src/Scene/: Entity.cpp  PhysicsIntegration.cpp  Scene.cpp  SceneSerializer.cpp
Engine/src/Scripting/: ScriptEngine.cpp  ScriptReloader.cpp
Sandbox/: CMakeLists.txt
Sandbox/assets/scripts/: EnemyAI.lua  EnemySpawner.lua  GameManager.lua  PlayerController.lua  Projectile.lua  Rotator.lua  ShooterEnemyAI.lua  ShooterPlayerController.lua
Sandbox/assets/shaders/: Texture.glsl
Sandbox/src/: main.cpp
scripts/: setup_glad.sh
